# lumen-wellness-app

./: .gitignore  .replit  README.md  approve.exp  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md  test_db.py  update_settings.py
artifacts/api-server/: package.json
artifacts/api-server/src/: app.ts
artifacts/mobile/: app.json  metro.config.js  package.json  tsconfig.json
artifacts/mobile/app/: _layout.tsx
artifacts/mobile/components/: GlassCard.tsx  HealthRings.tsx
artifacts/mobile/services/: db.ts  health.ts  notifications.ts  security.ts  storage.ts  sync.ts  (+1 more)
artifacts/wellness/: index.html  package.json  vite.config.ts
backend/: README.md  add_endpoints.py  pyproject.toml
backend/app/: main.py
backend/app/ai/: memory_sync.py  provider.py
backend/app/ai/agents/: base.py  fitness.py  nutrition.py  router.py
backend/app/api/: dependencies.py
backend/app/api/routers/: anthropic.py  bodymeasurements.py  dashboard.py  glucose.py  goals.py  hydration.py  intelligence.py  meals.py  medications.py  mentalwellness.py  planner.py  profiles.py  reminders.py  screentime.py  sleep.py  vitals.py  workouts.py
backend/app/core/: config.py  events.py  logging.py
backend/app/database/: session.py
backend/app/models/: memory.py  wellness.py
backend/app/repositories/: memory.py  wellness.py
backend/app/schemas/: memory.py  planner.py  wellness.py
backend/app/services/: predictive.py
backend/app/workers/: intelligence.py
backend/scripts/: migrate_meals.py  migrate_workouts.py
lib/api-spec/: openapi.json  openapi.yaml  orval.config.ts
(+99 files in other folders)
